--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Comicbooker</title>
+    <title>Books In Space!</title>
 
     <link href="css/main.css" rel="stylesheet">
 
@@ -12,7 +12,7 @@
 
 <body>
 
-    <h1>Books In Space</h1>
+    <h1>Books In Space!</h1>
 
     <%- include('partials/searchbar'); %>
 
