finished working on the layout some more, in a good place

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -1,21 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Books In Space!</title>
-
-    <link href="css/main.css" rel="stylesheet">
-
-</head>
-
-<body>
-
-    <h1>Books In Space!</h1>
+<%- include('partials/head'); %>
 
     <%- include('partials/searchbar'); %>
 
-</body>
+        <%- include('partials/navigation'); %>
 
-</html>
+            <%- include('partials/content'); %>
+
+                <%- include('partials/footer'); %>
