added jumbotron image

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -2,3 +2,9 @@ h3 {
     padding-top: 12px;
     display: inline-block;
 }
+
+.jumbotron {
+    background-image: url(https://images.pexels.com/photos/5984591/pexels-photo-5984591.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
