--- a/app/views/partials/content.ejs
+++ b/app/views/partials/content.ejs
@@ -1,8 +1,8 @@
 <div class="jumbotron">
-    <h1 class="display-3">Welcome!</h1>
-    <p class="lead">Books In Space! Your complete library for storing and managing your books!.</p>
-    <hr class="my-4">
-    <p>Create your account and share away!.</p>
+    <h1 class="display-3 text-dark">Welcome!</h1>
+    <p class="lead text-dark">Books In Space! Your complete library for storing and managing your books!.</p>
+    <hr class="my-4 text-light">
+    <p class="text-dark">Create your account and share away!</p>
     <p class="lead">
         <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
     </p>
