Working on more signup layout

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -4,6 +4,8 @@
 
         <%- include('partials/navigation'); %>
 
-            <%- include('partials/content'); %>
+            <!-- <%- include('partials/content'); %> -->
+
+            <%- include('partials/signup'); %>
 
                 <%- include('partials/footer'); %>
