starting on login page work

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -6,6 +6,8 @@
 
             <!-- <%- include('partials/content'); %> -->
 
+            <!-- <%- include('partials/login'); %> -->
+
             <%- include('partials/signup'); %>
 
                 <%- include('partials/footer'); %>
