--- a/app/views/partials/signup.ejs
+++ b/app/views/partials/signup.ejs
@@ -1,46 +1,28 @@
-<div class="signup-container">
-    <div class="social-container">
-        <form action="#">
-            <div class="row">
-                <h5 style="text-align:center">Login with Social Media or Manually</h5><br>
-                <div class="vl">
-                    <span class="vl-innertext">or</span>
-                </div>
+<div class="signup">
 
-                <div class="col">
-                    <a href="#" class="fb btn">
-                        <i class="fa fa-github fa-fw"></i> Login with Github
-                    </a>
-                    <a href="#" class="twitter btn">
-                        <i class="fa fa-twitter fa-fw"></i> Login with Twitter
-                    </a>
-                    <a href="#" class="google btn"><i class="fa fa-google fa-fw">
-              </i> Login with Gmail
-            </a>
-                </div>
+    <form action="#">
+        <div class="container">
+            <h1>Register</h1>
+            <p>Please fill in this form to create an account.</p>
+            <hr>
 
-                <div class="col">
-                    <div class="hide-md-lg">
-                        <p>Or sign in manually:</p>
-                    </div>
+            <label for="email"><b>Email</b></label>
+            <input type="text" placeholder="Enter Email" name="email" id="email" required>
 
-                    <input type="text" name="username" placeholder="Username" required>
-                    <input type="password" name="password" placeholder="Password" required>
-                    <input type="submit" value="Login">
-                </div>
+            <label for="psw"><b>Password</b></label>
+            <input type="password" placeholder="Enter Password" name="psw" id="psw" required>
 
-            </div>
-        </form>
-    </div>
+            <label for="psw-repeat"><b>Repeat Password</b></label>
+            <input type="password" placeholder="Repeat Password" name="psw-repeat" id="psw-repeat" required>
+            <hr>
+            <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
 
-    <div class="bottom-container">
-        <div class="row">
-            <div class="col">
-                <a href="#" style="color:white" class="btn">Sign up</a>
-            </div>
-            <div class="col">
-                <a href="#" style="color:white" class="btn">Forgot password?</a>
-            </div>
+            <button type="submit" class="registerbtn">Register</button>
         </div>
-    </div>
+
+        <div class="container signin">
+            <p>Already have an account? <a href="#">Sign in</a>.</p>
+        </div>
+    </form>
+
 </div>
