--- a/app/views/partials/login.ejs
+++ b/app/views/partials/login.ejs
@@ -1,4 +1,4 @@
-<div class="signup-container">
+<div class="login-container">
     <div class="social-container">
         <form action="#">
             <div class="row">
