--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -42,12 +42,12 @@ h3 {
 /* ==================================================== */
 
 
-/* ================ SIGNUP FORMS STYLES =============== */
+/* ================ LOGIN FORMS STYLES =============== */
 
 
 /* ==================================================== */
 
-.signup-container {
+.login-container {
     box-sizing: border-box;
 }
 
@@ -193,4 +193,83 @@ input[type=submit]:hover {
         display: block;
         text-align: center;
     }
+}
+
+
+/* ==================================================== */
+
+
+/* ================ SIGNUP FORMS STYLES =============== */
+
+
+/* ==================================================== */
+
+
+/* Add padding to containers */
+
+.signup-container {
+    padding: 16px;
+    background-color: white;
+    width: 60%;
+    margin: 0 auto;
+}
+
+
+/* Full-width input fields */
+
+input[type=text],
+input[type=password] {
+    width: 100%;
+    padding: 15px;
+    margin: 5px 0 22px 0;
+    display: inline-block;
+    border: none;
+    background: #f1f1f1;
+}
+
+input[type=text]:focus,
+input[type=password]:focus {
+    background-color: #ddd;
+    outline: none;
+}
+
+
+/* Overwrite default styles of hr */
+
+hr {
+    border: 1px solid #f1f1f1;
+    margin-bottom: 25px;
+}
+
+
+/* Set a style for the submit button */
+
+.registerbtn {
+    /* background-color: #4CAF50; */
+    /* color: white; */
+    padding: 16px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 50%;
+    opacity: 0.9;
+}
+
+.registerbtn:hover {
+    opacity: 1;
+}
+
+
+/* Add a blue text color to links */
+
+a {
+    color: dodgerblue;
+}
+
+
+/* Set a grey background color and center the text of the "sign in" section */
+
+.signin {
+    background-color: #f1f1f1;
+    text-align: center;
 }
