cleaning up css

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -1,13 +1,16 @@
 <%- include('partials/head'); %>
+<%- include('partials/searchbar'); %>
+<%- include('partials/navigation'); %>
 
-    <%- include('partials/searchbar'); %>
 
-        <%- include('partials/navigation'); %>
 
-            <!-- <%- include('partials/content'); %> -->
+    <%- include('partials/content'); %>
 
-            <!-- <%- include('partials/login'); %> -->
+    <%- include('partials/login'); %>
 
-            <%- include('partials/signup'); %>
+    <%- include('partials/signup'); %>
 
-                <%- include('partials/footer'); %>
+
+
+
+<%- include('partials/footer'); %>
