--- a/app/views/partials/login.ejs
+++ b/app/views/partials/login.ejs
@@ -8,13 +8,13 @@
                 </div>
 
                 <div class="col">
-                    <a href="#" class="fb btn">
+                    <a href="#" class="fb social-btn btn">
                         <i class="fa fa-github fa-fw"></i> Login with Github
                     </a>
-                    <a href="#" class="twitter btn">
+                    <a href="#" class="twitter social-btn btn">
                         <i class="fa fa-twitter fa-fw"></i> Login with Twitter
                     </a>
-                    <a href="#" class="google btn"><i class="fa fa-google fa-fw">
+                    <a href="#" class="google social-btn btn"><i class="fa fa-google fa-fw">
               </i> Login with Gmail
             </a>
                 </div>
@@ -26,7 +26,7 @@
 
                     <input type="text" name="username" placeholder="Username" required>
                     <input type="password" name="password" placeholder="Password" required>
-                    <input type="submit" value="Login">
+                    <input class="btn btn-primary" type="submit" value="Login">
                 </div>
 
             </div>
