--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -58,7 +58,7 @@ h3 {
 .social-container {
     position: relative;
     border-radius: 5px;
-    background-color: #f2f2f2;
+   
     padding: 20px 0 30px 0;
 }
 
@@ -66,7 +66,7 @@ h3 {
 /* style inputs and link buttons */
 
 input,
-.btn {
+.social-btn {
     width: 100%;
     padding: 12px;
     border: none;
@@ -106,7 +106,7 @@ input:hover,
 
 /* style the submit button */
 
-input[type=submit] {
+/* input[type=submit] {
     background-color: #4CAF50;
     color: white;
     cursor: pointer;
@@ -114,7 +114,7 @@ input[type=submit] {
 
 input[type=submit]:hover {
     background-color: #45a049;
-}
+} */
 
 
 /* Two-column layout */
@@ -224,12 +224,12 @@ input[type=password] {
     margin: 5px 0 22px 0;
     display: inline-block;
     border: none;
-    background: #f1f1f1;
+ 
 }
 
 input[type=text]:focus,
 input[type=password]:focus {
-    background-color: #ddd;
+  
     outline: none;
 }
 
