--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -1,3 +1,20 @@
+@media screen and (max-width: 650px) {
+    .col {
+        width: 100%;
+        margin-top: 0;
+    }
+    /* hide the vertical line */
+    .vl {
+        display: none;
+    }
+    /* show the hidden text on small screens */
+    .hide-md-lg {
+        display: block;
+        text-align: center;
+    }
+}
+
+
 /* ==================================================== */
 
 
@@ -28,7 +45,7 @@ h3 {
 /* ==================================================== */
 
 .jumbotron {
-    background-image: url(https://images.pexels.com/photos/5984591/pexels-photo-5984591.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
+    background-image: url('../img/books.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     text-shadow: 1px 1px 1px rgba(255, 255, 255, 1);
@@ -49,6 +66,7 @@ h3 {
 
 .login-container {
     box-sizing: border-box;
+    margin: 20px auto;
 }
 
 .social-container .row {
@@ -58,7 +76,6 @@ h3 {
 .social-container {
     position: relative;
     border-radius: 5px;
-   
     padding: 20px 0 30px 0;
 }
 
@@ -69,7 +86,6 @@ input,
 .social-btn {
     width: 100%;
     padding: 12px;
-    border: none;
     border-radius: 4px;
     margin: 5px 0;
     opacity: 0.85;
@@ -102,22 +118,6 @@ input:hover,
     background-color: #dd4b39;
     color: white;
 }
-
-
-/* style the submit button */
-
-/* input[type=submit] {
-    background-color: #4CAF50;
-    color: white;
-    cursor: pointer;
-}
-
-input[type=submit]:hover {
-    background-color: #45a049;
-} */
-
-
-/* Two-column layout */
 
 .col {
     float: left;
@@ -179,97 +179,25 @@ input[type=submit]:hover {
 
 /* Responsive layout - when the screen is less than 650px wide, make the two columns stack on top of each other instead of next to each other */
 
-@media screen and (max-width: 650px) {
-    .col {
-        width: 100%;
-        margin-top: 0;
-    }
-    /* hide the vertical line */
-    .vl {
-        display: none;
-    }
-    /* show the hidden text on small screens */
-    .hide-md-lg {
-        display: block;
-        text-align: center;
-    }
-}
-
 
 /* ==================================================== */
 
 
-/* ================ SIGNUP FORMS STYLES =============== */
+/* ================ REGISTER FORMS STYLES =============== */
 
 
 /* ==================================================== */
-
-
-/* Add padding to containers */
 
 .signup-container {
-    padding: 16px;
-    background-color: white;
-    width: 60%;
-    margin: 0 auto;
+    margin: 20px auto;
 }
 
-
-/* Full-width input fields */
-
-input[type=text],
-input[type=password] {
-    width: 100%;
-    padding: 15px;
-    margin: 5px 0 22px 0;
-    display: inline-block;
-    border: none;
- 
-}
-
-input[type=text]:focus,
-input[type=password]:focus {
-  
-    outline: none;
-}
-
-
-/* Overwrite default styles of hr */
-
-hr {
-    border: 1px solid #f1f1f1;
-    margin-bottom: 25px;
-}
-
-
-/* Set a style for the submit button */
-
-.registerbtn {
-    /* background-color: #4CAF50; */
-    /* color: white; */
-    padding: 16px 20px;
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
-    width: 50%;
-    opacity: 0.9;
-}
-
-.registerbtn:hover {
-    opacity: 1;
-}
-
-
-/* Add a blue text color to links */
-
-a {
-    color: dodgerblue;
-}
-
-
-/* Set a grey background color and center the text of the "sign in" section */
-
-.signin {
-    background-color: #f1f1f1;
-    text-align: center;
+.register-col {
+    background-image: url('../img/books.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position;
+    center right;
+    width: 550px;
+    height: 534px;
 }
