--- a/app/views/partials/register.ejs
+++ b/app/views/partials/register.ejs
@@ -11,19 +11,19 @@
                     <hr>
 
                     <label for="email"><b>Email</b></label>
-                    <input type="text" placeholder="Enter Email" name="email" id="email" required>
+                    <input class="form-control input-sm" type="text" placeholder="Enter Email" name="email" id="email" required>
 
                     <label for="psw"><b>Password</b></label>
-                    <input type="password" placeholder="Enter Password" name="psw" id="psw" required>
+                    <input class="form-control input-sm" type="password" placeholder="Enter Password" name="psw" id="psw" required>
 
                     <label for="psw-repeat"><b>Repeat Password</b></label>
-                    <input type="password" placeholder="Repeat Password" name="psw-repeat" id="psw-repeat" required>
+                    <input class="form-control input-sm" type="password" placeholder="Repeat Password" name="psw-repeat" id="psw-repeat" required>
                     <hr>
                     <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
 
-                    <button type="submit" class="btn btn-primary">Register</button>
-                    <div class="container signin">
-                        <p>Already have an account? <a href="#">Sign in</a>.</p>
+                    <button type="submit" class="btn btn-primary register-btn">Register</button>
+                    <div class="signin">
+                        <p>Already have an account? <a href="# ">Sign in</a>.</p>
                     </div>
                 </div>
             </form>
