--- a/app/views/partials/login.ejs
+++ b/app/views/partials/login.ejs
@@ -1,36 +1,24 @@
 <div class="login-container">
-    <div class="social-container">
-        <form action="#">
-            <div class="row">
-                <h5 style="text-align:center">Login with Social Media or Manually</h5><br>
-                <div class="vl">
-                    <span class="vl-innertext">or</span>
-                </div>
+    <div class="row">
+        <div class="col-1"></div>
+        <div class="col-4">
+            <h5>Sign in Socially</h5>
 
-                <div class="col">
-                    <a href="#" class="fb social-btn btn">
-                        <i class="fa fa-github fa-fw"></i> Login with Github
-                    </a>
-                    <a href="#" class="twitter social-btn btn">
-                        <i class="fa fa-twitter fa-fw"></i> Login with Twitter
-                    </a>
-                    <a href="#" class="google social-btn btn"><i class="fa fa-google fa-fw">
-              </i> Login with Gmail
-            </a>
-                </div>
+            <a href="#" class="fb social-btn btn"><i class="fa fa-github fa-fw"></i> Login with Github</a>
+            <a href="#" class="twitter social-btn btn"><i class="fa fa-twitter fa-fw"></i> Login with Twitter</a>
+            <a href="#" class="google social-btn btn"><i class="fa fa-google fa-fw"></i> Login with Gmail</a>
 
-                <div class="col">
-                    <div class="hide-md-lg">
-                        <p>Or sign in manually:</p>
-                    </div>
 
-                    <input type="text" name="username" placeholder="Username" required>
-                    <input type="password" name="password" placeholder="Password" required>
-                    <input class="btn btn-primary" type="submit" value="Login">
-                </div>
-
-            </div>
-        </form>
+        </div>
+        <div class="col-2"></div>
+        <div class="col-4">
+            <h5>Sign in manually</h5>
+            <form action="#">
+                <input class="form-control input-sm" type="text" name="username" placeholder="Username" required>
+                <input class="form-control input-sm" type="password" name="password" placeholder="Password" required>
+                <input class="btn btn-primary" type="submit" value="Login">
+        </div>
+        <div class="col-1"></div>
     </div>
 
     <div class="bottom-container">
