--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -1,16 +1,13 @@
 <%- include('partials/head'); %>
-<%- include('partials/searchbar'); %>
+ <%- include('partials/searchbar'); %>
 <%- include('partials/navigation'); %>
 
-
-
-    <%- include('partials/content'); %>
+     <%- include('partials/content'); %>
 
     <%- include('partials/login'); %>
 
     <%- include('partials/register'); %>
 
+    <%- include('partials/userprofile'); %>
 
-
-
-<%- include('partials/footer'); %>
+ <%- include('partials/footer'); %>
