--- a/app/views/partials/navigation.ejs
+++ b/app/views/partials/navigation.ejs
@@ -26,8 +26,8 @@
                 <a class="nav-link disabled" href="#">Disabled</a>
             </li> -->
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-            <input class=" form-control mr-sm-2" type="search" placeholder="Search for a book..." aria-label="Search">
+        <form class="form-inline my-2 my-lg-0" action="/book-search" method="GET">
+            <input class=" form-control mr-sm-2" type="search" placeholder="Search for a book..." aria-label="Search" name="booktitle">
             <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
         </form>
     </div>
