fixed the search form and home page

--- a/app/views/layouts/index.ejs
+++ b/app/views/layouts/index.ejs
@@ -4,8 +4,8 @@
 
 
 
-            <%- include('../partials/content'); %>
 
+            <%- body %>
                 <%- include('../partials/login'); %>
 
                     <%- include('../partials/register'); %>
