--- a/app/views/partials/head.ejs
+++ b/app/views/partials/head.ejs
@@ -17,7 +17,7 @@
 
         <!-- Image and text -->
         <nav class="navbar navbar-light bg-light">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="/">
                 <img src="/img/space.png" width="60" height="60" class="d-inline-block align-top" alt="">
                 <h3 class="d-print-inline-block">Books In Space!</h3>
             </a>
