working on user profile bookshelf

--- a/app/views/layouts/index.ejs
+++ b/app/views/layouts/index.ejs
@@ -11,6 +11,6 @@
                     <%- include('../partials/register'); %>
 
 
+                        <%- include('../partials/savedbooks'); %>
 
-
-                        <%- include('../partials/footer'); %>
+                            <%- include('../partials/footer'); %>
