--- a/app/views/partials/savedbooks.ejs
+++ b/app/views/partials/savedbooks.ejs
@@ -12,46 +12,60 @@
                     <li class="list-group-item">Books read: 25</li>
                     <li class="list-group-item">Age: 40</li>
                 </ul>
-                <div class="card-body">
-                    <a href="#" class="card-link">Card link</a>
-                    <a href="#" class="card-link">Another link</a>
-                </div>
             </div>
         </div>
         <!-- BOOKS READ -->
 
-        <div class="card" style="width: 9rem;">
-            <img src="/img/cosmos.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <p class="card-text">
-                    <h3>Cosmos</h3>
-                    <li>Author: Carl Sagan</li>
-                    <p>Cosmos traces the origins of knowledge and the scientific method, mixing science and philosophy, and speculates to the future of science. </p>
-                </p>
+        <div class="row">
+            <div class="col-12 results">
+                <div class="card-layouts">
+                    <img src="img/cosmos.jpg" alt="Cosmos">
+                </div>
             </div>
         </div>
 
-        <div class="card" style="width: 9rem;">
-            <img src="/img/cosmos.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <p class="card-text">
-                    <h3>Cosmos</h3>
-                    <li>Author: Carl Sagan</li>
-                    <p>Cosmos traces the origins of knowledge and the scientific method, mixing science and philosophy, and speculates to the future of science. </p>
-                </p>
+        <div class="row">
+            <div class="col-12 results">
+                <div class="card-layouts">
+                    <img src="img/cosmos.jpg" alt="Cosmos">
+                </div>
             </div>
         </div>
 
-        <div class="card" style="width: 9rem;">
-            <img src="/img/cosmos.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <p class="card-text">
-                    <h3>Cosmos</h3>
-                    <li>Author: Carl Sagan</li>
-                    <p>Cosmos traces the origins of knowledge and the scientific method, mixing science and philosophy, and speculates to the future of science. </p>
-                </p>
+        <div class="row">
+            <div class="col-12 results">
+                <div class="card-layouts">
+                    <img src="img/cosmos.jpg" alt="Cosmos">
+                </div>
             </div>
         </div>
+
+        <div class="row">
+            <div class="col-12 results">
+                <div class="card-layouts">
+                    <img src="img/cosmos.jpg" alt="Cosmos">
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-12 results">
+                <div class="card-layouts">
+                    <img src="img/cosmos.jpg" alt="Cosmos">
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-12 results">
+                <div class="card-layouts">
+                    <img src="img/cosmos.jpg" alt="Cosmos">
+                </div>
+            </div>
+        </div>
+
+
+
 
     </div>
 </div>
