adds create user route to register ejs page

--- a/app/views/partials/login.ejs
+++ b/app/views/partials/login.ejs
@@ -10,15 +10,15 @@
 
 
         </div>
-        <div class="col-2"></div>
+        <!-- <div class="col-2"></div>
         <div class="col-4">
             <h5>Sign in manually</h5>
-            <form action="#">
+            <form action="" method="">
                 <input class="form-control input-sm" type="text" name="username" placeholder="Username" required>
                 <input class="form-control input-sm" type="password" name="password" placeholder="Password" required>
                 <input class="btn btn-primary" type="submit" value="Login">
         </div>
-        <div class="col-1"></div>
+        <div class="col-1"></div> -->
     </div>
 
     <div class="bottom-container">
