--- a/app/views/partials/register.ejs
+++ b/app/views/partials/register.ejs
@@ -4,7 +4,7 @@
             <div class="register-col"> </div>
         </div>
         <div class="col">
-            <form action="#">
+            <form action="/user" method="POST">
                 <div class="container">
                     <h1>Register</h1>
                     <p>Please fill in this form to create an account.</p>
@@ -13,11 +13,13 @@
                     <label for="email"><b>Email</b></label>
                     <input class="form-control input-sm" type="text" placeholder="Enter Email" name="email" id="email" required>
 
-                    <label for="psw"><b>Password</b></label>
-                    <input class="form-control input-sm" type="password" placeholder="Enter Password" name="psw" id="psw" required>
-
-                    <label for="psw-repeat"><b>Repeat Password</b></label>
-                    <input class="form-control input-sm" type="password" placeholder="Repeat Password" name="psw-repeat" id="psw-repeat" required>
+                    <label for="password"><b>Password</b></label>
+                    <input class="form-control input-sm" type="password" placeholder="Enter Password" name="password" id="password" required>
+                    
+                    <!-- Commented this out because we don't have the validation built, maybe for V 2.0-->
+                    
+                    <!-- <label for="psw-repeat"><b>Repeat Password</b></label>
+                    <input class="form-control input-sm" type="password" placeholder="Repeat Password" name="psw-repeat" id="psw-repeat" required> -->
                     <hr>
                     <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
 
