--- a/app/views/partials/head.ejs
+++ b/app/views/partials/head.ejs
@@ -14,26 +14,20 @@
 <body>
 
     <div class="container">
-
-        <!-- Image and text -->
         <nav class="navbar navbar-light bg-light">
             <a class="navbar-brand" href="/">
                 <img src="/img/space.png" width="60" height="60" class="d-inline-block align-top" alt="">
                 <h3 class="d-print-inline-block">Books In Space!</h3>
             </a>
-            <form action="/login">
-                <div class="form-group d-sm-inline-flex p-2">
-                    <div class="col-xs-2">
-                        <!-- <label for="exampleInputEmail1">Login</label> -->
-                        <input type="email" class="form-control input-sm" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" style="">
-                    </div>
-                    <div>
-                        <!-- <label for="exampleInputPassword1">Password</label> -->
-                        <input type="password" class="form-control input-sm" id="exampleInputPassword1" placeholder="Password" style="">
-                        <button type="button" class="btn btn-primary">Primary</button>
-                    </div>
-
+            <form action="/" class="form-inline">
+                <div class="form-group  mb-2">
+                    <label for="staticEmail2" class="sr-only">Email</label>
+                    <input type="text" class="form-control" id="staticEmail2" value="email@example.com">
                 </div>
-
+                <div class="form-group mx-sm-3 mb-2">
+                    <label for="inputPassword2" class="sr-only">Password</label>
+                    <input type="password" class="form-control" id="inputPassword2" placeholder="Password">
+                </div>
+                <button type="submit" class="btn btn-primary mb-2">Login</button>
             </form>
         </nav>
