--- a/app/views/partials/navigation.ejs
+++ b/app/views/partials/navigation.ejs
@@ -9,22 +9,8 @@
                 <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">My Books</a>
+                <a class="nav-link" href="/">My Books</a>
             </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Browse
-              </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                </div>
-            </li>
-            <!-- <li class="nav-item">
-                <a class="nav-link disabled" href="#">Disabled</a>
-            </li> -->
         </ul>
         <form class="form-inline my-2 my-lg-0" action="/book-search" method="GET">
             <input class=" form-control mr-sm-2" type="search" placeholder="Search for a book..." aria-label="Search" name="booktitle">
