connects github route to front end

--- a/app/views/partials/login.ejs
+++ b/app/views/partials/login.ejs
@@ -4,10 +4,10 @@
         <div class="col-4">
             <h5>Sign in Socially</h5>
 
-            <a href="#" class="fb social-btn btn"><i class="fa fa-github fa-fw"></i> Login with Github</a>
-            <a href="#" class="twitter social-btn btn"><i class="fa fa-twitter fa-fw"></i> Login with Twitter</a>
+            <a href="/github" METHOD="get" class="fb social-btn btn"><i class="fa fa-github fa-fw"></i> Login with Github</a>
+            <!--<a href="#" class="twitter social-btn btn"><i class="fa fa-twitter fa-fw"></i> Login with Twitter</a>
             <a href="#" class="google social-btn btn"><i class="fa fa-google fa-fw"></i> Login with Gmail</a>
-
+            -->
 
         </div>
         <!-- <div class="col-2"></div>
