--- a/app/views/layouts/index.ejs
+++ b/app/views/layouts/index.ejs
@@ -3,5 +3,7 @@
         <%- include('../partials/navigation'); %>
 
             <%- body %>
-        
-                        <%- include('../partials/footer'); %>
+
+                <%- include('../partials/userprofile'); %>
+
+                    <%- include('../partials/footer'); %>
