--- a/app/views/partials/content.ejs
+++ b/app/views/partials/content.ejs
@@ -4,7 +4,7 @@
     <hr class="my-4 text-light">
     <p class="text-dark">Create your account and share away!</p>
     <p class="lead">
-        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+        <a class="btn btn-primary btn-lg" href="/register" role="button">Learn more</a>
     </p>
 </div>
 
