--- a/app/views/partials/footer.ejs
+++ b/app/views/partials/footer.ejs
@@ -6,7 +6,7 @@
                 <h5 class="mb-1">Register for free</h5>
             </li>
             <li class="list-inline-item">
-                <a href="#!" class="btn btn-outline-primary btn-rounded">Sign up!</a>
+                <a href="/register" class="btn btn-outline-primary btn-rounded">Sign up!</a>
             </li>
         </ul>
 
