--- a/app/views/partials/register.ejs
+++ b/app/views/partials/register.ejs
@@ -15,9 +15,9 @@
 
                     <label for="password"><b>Password</b></label>
                     <input class="form-control input-sm" type="password" placeholder="Enter Password" name="password" id="password" required>
-                    
+
                     <!-- Commented this out because we don't have the validation built, maybe for V 2.0-->
-                    
+
                     <!-- <label for="psw-repeat"><b>Repeat Password</b></label>
                     <input class="form-control input-sm" type="password" placeholder="Repeat Password" name="psw-repeat" id="psw-repeat" required> -->
                     <hr>
@@ -25,7 +25,7 @@
 
                     <button type="submit" class="btn btn-primary register-btn">Register</button>
                     <div class="signin">
-                        <p>Already have an account? <a href="# ">Sign in</a>.</p>
+                        <p>Already have an account? <a href="/userprofile ">Sign in</a>.</p>
                     </div>
                 </div>
             </form>
