added a required parameter to the search field so that it wouldn't submit an empty book search and error

--- a/app/views/partials/navigation.ejs
+++ b/app/views/partials/navigation.ejs
@@ -36,7 +36,7 @@
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0" action="/book-search" method="GET">
-                <input class=" form-control mr-sm-2" type="search" placeholder="Search for a book..." aria-label="Search" name="booktitle">
+                <input class=" form-control mr-sm-2" type="search" placeholder="Search for a book..." aria-label="Search" name="booktitle" required>
                 <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
             </form>
         </div>
