--- a/app/views/partials/register.ejs
+++ b/app/views/partials/register.ejs
@@ -21,7 +21,7 @@
                     <!-- <label for="psw-repeat"><b>Repeat Password</b></label>
                     <input class="form-control input-sm" type="password" placeholder="Repeat Password" name="psw-repeat" id="psw-repeat" required> -->
                     <hr>
-                    <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
+                    <p>By creating an account you agree to our <a href="/terms">Terms & Privacy</a>.</p>
 
                     <button type="submit" class="btn btn-primary register-btn">Register</button>
                     <div class="signin">
