--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -148,7 +148,11 @@
     
     .card-container {
         display: inline-block;
-        margin: 30px;
+        margin: 30px auto;
+    }
+    
+    .socially {
+        margin-top: 30px;
     }
     /* ==================================================== */
     /* =================== USER PROFILE ================== */
