--- a/app/views/partials/register.ejs
+++ b/app/views/partials/register.ejs
@@ -24,6 +24,12 @@
                     <p>By creating an account you agree to our <a href="/terms">Terms & Privacy</a>.</p>
 
                     <button type="submit" class="btn btn-primary register-btn">Register</button>
+                    <hr>
+                    <div class="container socially">
+                        <h3>Social login</h3>
+                        <p>Use a social account to login with.</p>
+                        <a href="/github" METHOD="get" class="fb social-btn btn"><i class="fa fa-github fa-fw"></i> Login with Github</a>
+                    </div>
                     <div class="signin">
                         <p>Already have an account? <a href="/userprofile ">Sign in</a>.</p>
                     </div>
