--- a/app/views/partials/userprofile.ejs
+++ b/app/views/partials/userprofile.ejs
@@ -21,7 +21,7 @@
 
 
 
-        <div class="card-group">
+        <div class="card-group card-spacing">
             <div class="card">
                 <div class="card-layouts">
                     <img src="img/cosmos.jpg" alt="Cosmos">
