pausing on local login, don't merge if you see conflicts or duplicated efforts

--- a/app/views/partials/login.ejs
+++ b/app/views/partials/login.ejs
@@ -13,8 +13,8 @@
         <!-- <div class="col-2"></div>
         <div class="col-4">
             <h5>Sign in manually</h5>
-            <form action="" method="">
-                <input class="form-control input-sm" type="text" name="username" placeholder="Username" required>
+            <form action="/login" method="POST">
+                <input class="form-control input-sm" type="Email" name="Email" placeholder="Email" required>
                 <input class="form-control input-sm" type="password" name="password" placeholder="Password" required>
                 <input class="btn btn-primary" type="submit" value="Login">
         </div>
