resolved passport error and sequelize password error

--- a/app/views/partials/register.ejs
+++ b/app/views/partials/register.ejs
@@ -13,6 +13,9 @@
                     <label for="email"><b>Email</b></label>
                     <input class="form-control input-sm" type="text" placeholder="Enter Email" name="email" id="email" required>
 
+                    <label for="username"><b>Username</b></label>
+                    <input class="form-control input-sm" type="text" placeholder="Enter Username" name="username" id="username" required>
+
                     <label for="password"><b>Password</b></label>
                     <input class="form-control input-sm" type="password" placeholder="Enter Password" name="password" id="password" required>
 
