--- a/app/views/partials/navigation.ejs
+++ b/app/views/partials/navigation.ejs
@@ -3,19 +3,19 @@
 <div class="container">
     <nav class="navbar navbar-light bg-light">
         <a class="navbar-brand" href="/">
-            <img src="/img/space.png" width="60" height="60" class="d-inline-block align-top" alt="">
+            <img src="/img/space.png" width="60" height="60" class="d-inline-block align-top" alt="Books in space!">
             <h3 class="d-print-inline-block">Books In Space!</h3>
         </a>
-        <form action="/userprofile" class="form-inline">
+        <form class="form-inline">
             <div class="form-group  mb-2">
                 <label for="staticEmail2" class="sr-only">Email</label>
-                <input type="text" class="form-control" id="staticEmail2" value="email@example.com">
+                <input type="text" class="form-control" id="staticEmail2" value="Email address" name="emailaddress" required>
             </div>
             <div class="form-group mx-sm-3 mb-2">
                 <label for="inputPassword2" class="sr-only">Password</label>
-                <input type="password" class="form-control" id="inputPassword2" placeholder="Password">
+                <input type="password" class="form-control" id="inputPassword2" placeholder="Password" name="password" required>
             </div>
-            <button type="submit" class="btn btn-primary mb-2">Login</button>
+            <button class="btn btn-primary mb-2">Login</button>
         </form>
     </nav>
 
