--- a/app/views/partials/userprofile.ejs
+++ b/app/views/partials/userprofile.ejs
@@ -5,15 +5,19 @@
         <div class="col">
 
             <div class="card" style="width: 18rem;">
-                <img src="https://www.drumsinspace.com/images/john-in-space.png" class="card-img-top" alt="john space">
+                <img src="img/user.png" class="card-img-top" alt="john space">
                 <div class="card-body">
-                    <h5 class="card-title">John Nutter</h5>
-                    <p class="card-text"><strong>Bio:</strong> full stack developer fueled on coffee. Currently using MERN stacks, but I have an affinity for Python/Django and REST APIs. Also a fan of synthesizers and fm synthesis.</p>
+                    <h5 class="card-title">
+                        <%= name %>
+                    </h5>
+                    <p class="card-text"><strong>Bio:</strong> Click <a href="#">here</a> to add a bio.</p>
                 </div>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Email: hello@jnutterdev.com</li>
-                    <li class="list-group-item">Books read: 25</li>
-                    <li class="list-group-item">Age: 40</li>
+                    <li class="list-group-item"><strong>Email: </strong>
+                        <%= email  %>
+                    </li>
+                    <li class="list-group-item"><strong>Books read: </strong> 42</li>
+                    <li class="list-group-item"><strong>Birthday: </strong> 05/01</li>
                 </ul>
             </div>
         </div>
