--- a/app/views/partials/userprofile.ejs
+++ b/app/views/partials/userprofile.ejs
@@ -5,7 +5,7 @@
         <div class="col">
 
             <div class="card" style="width: 18rem;">
-                <img src="img/user.png" class="card-img-top" alt="john space">
+                <img src="" class="card-img-top" alt="john space">
                 <div class="card-body">
                     <h5 class="card-title">
                         <%= name %>
